--- a/src/pages/home/home-projects/HomeProjects.css
+++ b/src/pages/home/home-projects/HomeProjects.css
@@ -6,7 +6,7 @@
 }
 
 .projects-section h2 {
-  font-size: 3rem;
+  font-size: 52px;
   color: #f2e2d0;
   margin-bottom: 2rem;
 }
@@ -37,11 +37,6 @@
   transform: scale(1.25);
 }
 
-.project-card:hover h3 {
-  opacity: 0;
-  transform: scale(0.7);
-}
-
 .project-image {
   width: 100%;
   height: 100%;
@@ -54,10 +49,11 @@
   left: 0;
   width: 100%;
   padding: 30px;
-  background-color: rgba(0, 0, 0, 0.85);
-  color: white;
+  background-color: #062025d0;
+  color: #f2e2d0;
   transition: bottom 0.6s ease;
   text-align: center;
+  z-index: 1;
 }
 
 .project-card:hover .project-overlay {
@@ -65,14 +61,14 @@
 }
 
 .project-overlay h3 {
-  font-size: 24px;
+  font-size: 18px;
   margin: 0 0 20px;
   color: #f2e2d0;
-  transition: opacity 0.25s ease, transform 0.25s ease;
+  letter-spacing: 2px;
 }
 
 .project-overlay p {
-  font-size: 16px;
+  font-size: 14px;
   margin-bottom: 20px;
 }
 
@@ -80,4 +76,16 @@
   display: flex;
   gap: 10px;
   justify-content: center;
+}
+
+@media (max-width: 500px) {
+  .projects-section{
+    padding: 40px 15px;
+  }
+  .projects-section h2{
+    font-size: 33px;
+  }
+  .projects-section .button-56{
+    font-size: 14px;
+  }
 }
