--- a/src/pages/about/about-section-intro/AboutSectionIntro.css
+++ b/src/pages/about/about-section-intro/AboutSectionIntro.css
@@ -101,10 +101,10 @@
   }
 
   .text-section h1 {
-    font-size: 3rem;
+    font-size: 54px;
   }
 
   .text-section p {
-    font-size: 0.8rem;
+    font-size: 15px;
   }
 }
